# mini-llama3

./: .gitignore  inference.py  pyproject.toml  train.py
llama3/: Attention.py  RMSNorm.py  RoPE.py  feed_forward.py  input_block.py  llama3.py  param.py  transformer.py  transformer_block.py
tests/: __main__.py  test_input_block.py  tests.py
