[project]
name = "llama3"
version = "0.1.0"
description = "This is a simple toy example of a Llama 3 model implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pytest-cov>=6.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
